--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>貓咪</title>
-	<meta name="description" content="Cat">
-	<meta property="og:title" content="貓咪">
-	<meta property="og:description" content="Cat">
+	<title>Cat</title>
+	<meta property="og:title" content="Cat">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image" href="icon.png">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,12 +23,36 @@
 
 		#logo div {
 			transition-duration: 0.3s;
-			background: #555555;
+			background: #999999;
 		}
 
 		#logo:hover div {
 			opacity: 0;
 			transform: translate(-100%);
+		}
+
+		.card {
+			position: fixed;
+			top: 0px;
+			left: 0px;
+			padding: 10px;
+			background: white;
+			border-radius: 6px;
+			transition: opacity 0.5s;
+			text-align: center;
+		}
+
+		.card h1 {
+			margin: 5px;
+			font: 700 21px Noto Sans TC;
+			letter-spacing: 1px;
+			color: #333333;
+		}
+
+		.card p {
+			margin: 5px;
+			font: 300 18px Noto Sans TC;
+			color: #999999;
 		}
 	</style>
 </head>
@@ -43,7 +65,6 @@
 			</div>
 		</div>
 	</div>
-	<canvas id="gui" style="position: fixed; width: 100%; height: 100%; pointer-events: none; z-index: 2;"></canvas>
 	<a id="logo" style="width: 80px; height:80px; position: fixed; margin: 20px; right: 0px; bottom: 0px;" href="https://s24egao.github.io" target="_blank">
 		<div style="position: absolute; width: 45%; height: 9%; top: 36%; left: 0%;"></div>
 		<div style="position: absolute; width: 9%; height: 45%; top: 27%; left: 18%;"></div>
@@ -57,8 +78,26 @@
 		<div style="position: absolute; width: 18%; height: 9%; top: 54%; left: 63%;"></div>
 		<div style="position: absolute; width: 45%; height: 9%; top: 63%; left: 54%;"></div>
 	</a>
-	<script src="https://unpkg.com/three@0.143.0/build/three.min.js"></script>
-	<script src="https://unpkg.com/three@0.143.0/examples/js/loaders/GLTFLoader.js"></script>
-	<script src="index.js"></script>
+	<div class="card" id="card-1">
+		<h1>Box</h1>
+		<p>this is a box.</p>
+	</div>
+	<div class="card" id="card-2">
+		<h1>Box</h1>
+		<p>this is another box.</p>
+	</div>
+	
+	<script type="importmap">
+		{
+			"imports": {
+				"three": "https://unpkg.com/three@0.153.0/build/three.module.js",
+				"three/addons/": "https://unpkg.com/three@0.153.0/examples/jsm/"
+			}
+		}
+	</script>
+	<script type="module" src="particle.js"></script>
+	<script src="object_tracker.js"></script>
+	<script src="input.js"></script>
+	<script type="module" src="index.js"></script>
 </body>
 </html>
