--- a/index.html
+++ b/index.html
@@ -35,23 +35,24 @@
 			position: fixed;
 			top: 0px;
 			left: 0px;
-			padding: 10px;
+			padding: 6px;
 			background: white;
 			border-radius: 6px;
 			transition: opacity 0.5s;
 			text-align: center;
+			opacity: 0;
 		}
 
 		.card h1 {
-			margin: 5px;
-			font: 700 21px Noto Sans TC;
+			margin: 3px;
+			font: 700 18px Noto Sans TC;
 			letter-spacing: 1px;
 			color: #333333;
 		}
 
 		.card p {
-			margin: 5px;
-			font: 300 18px Noto Sans TC;
+			margin: 3px;
+			font: 300 16px Noto Sans TC;
 			color: #999999;
 		}
 	</style>
@@ -59,7 +60,7 @@
 <body>
 	<div id="loading" style="background: white; position: fixed; width: 100%; height: 100%; transition-duration: 0.5s; z-index: 3;">
 		<div id="progress" style="position: fixed; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; flex-direction: column; transition-duration: 0.5s;">
-			<div style="margin: 20px; color: #999999; font: 24px Noto Sans TC;">Loading...</div>
+			<div style="margin: 20px; color: #999999; font: 24px Noto Sans TC; letter-spacing: 1px;">LOADING...</div>
 			<div style="width: 30%; height: 3px; background: #dddddd;">
 				<div style="width: 0%; height: 100%; background: #999999; transition-duration: 1s"></div>
 			</div>
