--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="utf-8">
 	<title>Cat</title>
 	<meta property="og:title" content="Cat">
+	<meta property="og:image" content="https://s24egao.github.io/cat/preview.png">
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:image" content="https://s24egao.github.io/cat/preview.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image" href="icon.png">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +26,7 @@
 
 		#logo div {
 			transition-duration: 0.3s;
-			background: #999999;
+			background: white;
 		}
 
 		#logo:hover div {
@@ -61,7 +64,7 @@
 	<div id="loading" style="background: white; position: fixed; width: 100%; height: 100%; transition-duration: 0.5s; z-index: 3;">
 		<div id="progress" style="position: fixed; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; flex-direction: column; transition-duration: 0.5s;">
 			<div style="margin: 20px; color: #999999; font: 24px Noto Sans TC; letter-spacing: 1px;">LOADING...</div>
-			<div style="width: 30%; height: 3px; background: #dddddd;">
+			<div style="width: 300px; height: 3px; background: #dddddd;">
 				<div style="width: 0%; height: 100%; background: #999999; transition-duration: 1s"></div>
 			</div>
 		</div>
