--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
 		<div style="position: absolute; width: 45%; height: 9%; top: 63%; left: 54%;"></div>
 	</a>
 	<div class="card" id="card-1">
-		<h1>Box</h1>
-		<p>this is a box.</p>
+		<h1>Hello</h1>
+		<p>Welcome to my webpage!</p>
 	</div>
 	<div class="card" id="card-2">
-		<h1>Box</h1>
-		<p>this is another box.</p>
+		<h1>Controls</h1>
+		<p>Touch on screen or use WASD<br>keys to control movement.</p>
 	</div>
 	
 	<script type="importmap">
